unpackaged/post/02_heda_objects_ui/objects/hed__Trigger_Handler__c.object
<CustomObject>
    <description>Stores which classes to run in response to DML performed on an object.</description>
    <fields>
        <fullName>hed__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that this module is active</description>
        <inlineHelpText>Indicates that this module is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this module should be run asynchronously in this transaction</description>
        <inlineHelpText>Indicates that this module should be run asynchronously in this transaction</inlineHelpText>
        <label>Asynchronous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Class__c</fullName>
        <description>Name of the class to be run</description>
        <inlineHelpText>Name of the class to be run</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Filter_Field__c</fullName>
        <description>Name of the field used for filtering.</description>
        <inlineHelpText>Name of the field used for filtering.</inlineHelpText>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Filter_Value__c</fullName>
        <description>Value of the field used for filtering.</description>
        <inlineHelpText>Value of the field used for filtering.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Load_Order__c</fullName>
        <description>Order in which this module should be run, helps maintain dependencies in the modules and data.</description>
        <inlineHelpText>Order in which this module should be run, helps maintain dependencies in the modules and data.</inlineHelpText>
        <label>Load Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Object__c</fullName>
        <description>Name of the object this handler should be run for</description>
        <inlineHelpText>Name of the object this handler should be run for</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Owned_by_Namespace__c</fullName>
        <description>Enter the namespace of the package or Org that will control this Trigger handler.</description>
        <label>Owned by Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Trigger_Action__c</fullName>
        <description>Trigger Action in which this module should fire</description>
        <inlineHelpText>Trigger Action in which this module should fire</inlineHelpText>
        <label>Trigger Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BeforeInsert</fullName>
                </value>
                <value>
                    <fullName>BeforeUpdate</fullName>
                </value>
                <value>
                    <fullName>BeforeDelete</fullName>
                </value>
                <value>
                    <fullName>AfterInsert</fullName>
                </value>
                <value>
                    <fullName>AfterUpdate</fullName>
                </value>
                <value>
                    <fullName>AfterDelete</fullName>
                </value>
                <value>
                    <fullName>AfterUndelete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__User_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The record is managed by the user and updates won&apos;t be pushed to it.</description>
        <inlineHelpText>Check it if you intent to manage the record yourself. Be aware that updates to the package won&apos;t update the record.</inlineHelpText>
        <label>User Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Usernames_to_Exclude__c</fullName>
        <description>Semicolon separated list of Salesforce usernames that this trigger will NOT run for.</description>
        <inlineHelpText>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</inlineHelpText>
        <label>Usernames to Exclude</label>
        <type>TextArea</type>
    </fields>
    <label>Trigger Handler</label>
    <listViews>
        <fullName>REDU</fullName>
        <columns>NAME</columns>
        <columns>hed__Active__c</columns>
        <columns>hed__Asynchronous__c</columns>
        <columns>hed__Class__c</columns>
        <columns>hed__Object__c</columns>
        <columns>hed__Load_Order__c</columns>
        <columns>hed__Trigger_Action__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>hed__Class__c</field>
            <operation>contains</operation>
            <value>rio_ed</value>
        </filters>
        <label>REDU</label>
    </listViews>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Active__c</columns>
        <columns>hed__Object__c</columns>
        <columns>hed__Load_Order__c</columns>
        <columns>hed__Trigger_Action__c</columns>
        <columns>hed__Class__c</columns>
        <columns>hed__Owned_by_Namespace__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trigger Handler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>